Display modal with inputs to add new recipes

--- a/index.css
+++ b/index.css
@@ -36,3 +36,99 @@ nav {
   color: white;
   transition: all 0.5s ease-in-out;
 }
+
+.save-recipe-button {
+  border: 3px white double;
+  background-color: #1fa521;
+  color: white;
+  padding: 1rem;
+  cursor: pointer;
+  display: block;
+  margin: 0 auto 1rem;
+  font-size: 1rem;
+  font-family: Palatino;
+  letter-spacing: 1px;
+  transition: all 0.3s ease-in-out;
+}
+
+.save-recipe-button:hover {
+  border: 3px white double;
+  background-color: #08593a;
+  color: white;
+  transition: all 0.3s ease-in-out;
+}
+
+/* The Modal (background) */
+#myModal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(167, 119, 255, 0.2);
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #ffffff;
+  margin: 300px auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.modal,
+.input-label {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  margin-left: 1rem;
+}
+
+.input-label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.name {
+  margin-top: 1rem;
+}
+
+.inputbox {
+  border-width: 0 0 1px;
+  border-color: black;
+  width: 85%;
+  margin-bottom: 2rem;
+}
+
+.recipe-haveCooked-label {
+  display: flex;
+}
+
+.recipe-haveCooked {
+  -ms-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -webkit-transform: scale(1.25);
+  -o-transform: scale(1.25);
+  width: 20px;
+}
+
+/* The Close Button */
+.close {
+  color: #9557ee;
+  float: right;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #6c1be5;
+  text-decoration: none;
+  cursor: pointer;
+}
